Changes

from version 0.91 to 0.92

improvements:
- zooming in the charts is now also possible by dragging up-right
- the zooming rectangle border is now properly shown
- stop the chart data scrolling while calibrating
- stop the chart data scrolling only when zoomed in, not when zoomed out

bugfix:
- fix initialization of the tab 'Test Settings'